--- a/css/footer.css
+++ b/css/footer.css
@@ -4,6 +4,8 @@
     padding: 2rem;
     background-color: #333;
     color: #fff;
+    box-shadow: inset 0 5px 5px rgb(0, 0, 0);
+
 }
 
 .footer-column {
