--- a/css/header.css
+++ b/css/header.css
@@ -1,17 +1,34 @@
+@font-face {
+    font-family: 'BannerFont';
+    /* src: url('../assets/fonts/'); */
+    src: url('../assets/fonts/black_chancery/BLKCHCRY.TTF');
+    /* src: url('../assets/fonts/gelaxttron_beyonkers/Gelaxttron\ Beyonkers\ DEMO\ VERSION.otf'); */
+    /* src: url('../assets/fonts/khiara_script/©\ 2020\ NUGS\ Project\ Khiara\ Script.ttf'); */
+    /* src: url('../assets/fonts/scartoon/Scartoon.otf'); */
+    /* src: url('../assets/fonts/spell_of_asia/Spell\ of\ Asia.ttf'); */
+    /* src: url('../assets/fonts/wintter_bronks/Wintter\ Bronks\ DEMO\ VERSION.otf'); */
+    font-weight: normal;
+    font-style: normal;
+}
+
 .banner {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex: 1;
     max-width: 70rem;
-    background-color: #8d8d8d;
+    background: linear-gradient(to right, #d1aa91, #8ea9b0);
     height: 100%;
     padding: 0 5rem 0 2rem;
 }
 
+.banner h1, .banner h6{
+    font-family: 'BannerFont';
+}
+
 .banner-background {
     height: 20vh;
-    background-color: #555;
+    background: linear-gradient(to right, #d1aa91 50%, #8ea9b0 50%);
     color: rgba(255, 255, 255, 0.75);
     display: flex;
     align-items: center;
@@ -19,13 +36,21 @@
 }
 
 .banner h1, .banner h6{
-        margin: 0;
+    margin: 0;
+}
+
+.banner h1{
+    color: #3b414b;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+
 }
 
 .banner h6 {
     color: rgba(255, 255, 255, 0.75);
+    font-weight: 700;
     letter-spacing: 0.25rem;
     text-align: right;
+    text-shadow: 1px 1px 2px black;
 }
 
 .banner-list {
@@ -34,7 +59,10 @@
 }
 
 .nav-container{
-    background-color: rgb(180, 180, 180);
+    /* background-color: rgb(187, 56, 29); */
+    background: linear-gradient(to bottom, rgb(187, 56, 29), rgb(190, 104, 87), rgb(187, 56, 29));
+    border-top: rgba(0, 0, 0, 0.75) solid 2px;
+    box-shadow: 0px 3px 1px black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -64,12 +92,12 @@
     padding: 0.2rem 1rem;
     text-align: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.1);
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+    background-color: rgba(255, 255, 255, 0.75);
     border-radius: 4px;
     justify-content: center;
     transition: opacity 0.2s ease, text-shadow 0.3s ease;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+    border: 1px solid rgba(0, 0, 0, 1);
 }
 
 .navbar li:hover {
