--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,4 @@
-.footer-content {
+footer .footer-content {
     display: flex;
     justify-content: space-between;
     padding: 2rem;
@@ -8,37 +8,37 @@
 
 }
 
-.footer-column {
+footer .footer-column {
     flex: 1;
     margin: 0 1rem;
     text-align: center;
 }
 
-.footer-column h3 {
+footer .footer-column h3 {
     margin-bottom: 1rem;
     font-size: 1.2rem;
     color: white;
 }
 
-.footer-column ul {
+footer .footer-column ul {
     list-style: none;
     padding: 0;
 }
 
-.footer-column li {
+footer .footer-column li {
     margin: 0.5rem 0;
 }
 
-.footer-column a {
+footer .footer-column a {
     color: #fff;
     text-decoration: none;
 }
 
-.footer-column a:hover {
+footer .footer-column a:hover {
     text-decoration: underline;
 }
 
-.footer-copyright {
+footer .footer-copyright {
     text-align: center;
     width: 100%;
     padding: 1rem 0;
@@ -49,11 +49,11 @@
 
 @media screen and (max-width: 600px) {
 
-    .footer-content {
+    footer .footer-content {
         flex-direction: column;
     }
 
-    .footer-column {
+    footer .footer-column {
         flex: 1;
         margin: 1rem 1rem;
         text-align: center;
