--- a/css/header.css
+++ b/css/header.css
@@ -11,41 +11,41 @@
     font-style: normal;
 }
 
-.banner {
+header .banner {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex: 1;
     max-width: 70rem;
-    background: linear-gradient(to right, #d1aa91, #8ea9b0);
+    background: linear-gradient(to right, #a18370, #5c6f74);
     height: 100%;
     padding: 0 5rem 0 2rem;
 }
 
-.banner h1, .banner h6{
+header .banner h1, .banner h6{
     font-family: 'BannerFont';
 }
 
-.banner-background {
+header .banner-background {
     height: 20vh;
-    background: linear-gradient(to right, #d1aa91 50%, #8ea9b0 50%);
+    background: linear-gradient(to right, #a18370 50%, #5c6f74   50%);
     color: rgba(255, 255, 255, 0.75);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.banner h1, .banner h6{
+header .banner h1, .banner h6{
     margin: 0;
 }
 
-.banner h1{
-    color: #3b414b;
+header .banner h1{
+    color: #dfdfdf;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
 
 }
 
-.banner h6 {
+header .banner h6 {
     color: rgba(255, 255, 255, 0.75);
     font-weight: 700;
     letter-spacing: 0.25rem;
@@ -53,12 +53,11 @@
     text-shadow: 1px 1px 2px black;
 }
 
-.banner-list {
+header .banner-list {
     text-align: right;
-
 }
 
-.nav-container{
+header .nav-container{
     /* background-color: rgb(187, 56, 29); */
     background: linear-gradient(to bottom, rgb(187, 56, 29), rgb(190, 104, 87), rgb(187, 56, 29));
     border-top: rgba(0, 0, 0, 0.75) solid 2px;
@@ -68,7 +67,7 @@
     justify-content: center;
 }
 
-.navbar {
+header .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -76,7 +75,7 @@
     max-width: 70rem;
 }
 
-.navbar ul {
+header .navbar ul {
     display: flex;
     list-style: none;
     padding: 0;
@@ -86,7 +85,7 @@
     align-items: center;
 }
 
-.navbar li {
+header .navbar li {
     display: flex;
     margin: 0.3rem;
     padding: 0.2rem 1rem;
@@ -100,17 +99,17 @@
     border: 1px solid rgba(0, 0, 0, 1);
 }
 
-.navbar li:hover {
+header .navbar li:hover {
     opacity: 0.75;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-.navbar a {
+header .navbar a {
     text-decoration: none;
     font-weight: 700;
 }
 
-.hamburger {
+header .hamburger {
     display: none;
     cursor: pointer;
 }
@@ -120,32 +119,32 @@
 
 @media screen and (max-width: 768px) {
 
-    .banner-background {
+    header .banner-background {
         height: 30vh;
     }
 
-    .banner h6 {
+    header .banner h6 {
         text-align: left;
     }
 
-    .banner-list {
+    header .banner-list {
         display: none;
     }
 
-    .mobile-menu {
+    header .mobile-menu {
         color: rgba(255, 255, 255, 0.7);
         display: flex;
         flex-direction: column;
         position: absolute;
-        top: 0rem;
+        top: 0;
         right: 0;
         background-color: #000000da;
         width: 18rem;
         padding: 1.5rem;
         padding-top: 4rem;
     }
-    
-    .mobile-menu ul {
+
+    header .mobile-menu ul {
         display: flex;
         flex-direction: column;
         padding: 0;
@@ -154,7 +153,7 @@
         width: 100%;
     }
 
-    .mobile-menu li {
+    header .mobile-menu li {
         /* margin-bottom: 0.75rem; */
         display: flex;
         flex-grow: 1;
@@ -166,12 +165,12 @@
         box-shadow: 0px 2px 0px rgba(255, 255, 255, 0.3);
     }
 
-    .mobile-menu li a {
+    header .mobile-menu li a {
         flex: 1;
         text-align: left;
     }
 
-    .hamburger {
+    header .hamburger {
         display: block;
         position: fixed;
         top: 20px;
