--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 footer .footer-content {
-    display: flex;
+    display: none;
     justify-content: space-between;
     padding: 2rem;
     background-color: #333;
@@ -40,16 +40,23 @@ footer .footer-column a:hover {
 footer .footer-copyright {
     text-align: center;
     width: 100%;
-    padding: 1rem 0;
-    background-color: #222;
+    padding: 0.5rem 0;
+    background-color: #111;
     color: #fff;
     font-size: 0.9rem;
 }
 
-@media screen and (max-width: 600px) {
+footer .credits{
+    color: rgba(255, 255, 255, 0.4);
+    font-size: 0.7rem;
+}
+
+@media screen and (max-width: 768px) {
 
     footer .footer-content {
+        display: flex;
         flex-direction: column;
+        padding: 0rem;
     }
 
     footer .footer-column {
@@ -59,6 +66,7 @@ footer .footer-copyright {
     }
 
 }
+
 
 /* Mantém o footer na parte de baixo da tela */
 
