--- a/css/header.css
+++ b/css/header.css
@@ -11,20 +11,6 @@
     font-style: normal;
 }
 
-header .banner {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex: 1;
-    max-width: 70rem;
-    background: linear-gradient(to right, #a18370, #5c6f74);
-    height: 100%;
-    padding: 0 5rem 0 2rem;
-}
-
-header .banner h1, .banner h6{
-    font-family: 'BannerFont';
-}
 
 header .banner-background {
     height: 20vh;
@@ -34,6 +20,62 @@ header .banner-background {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+header .banner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex: 1;
+    max-width: 80rem;
+    background: linear-gradient(to right, #a18370, #5c6f74);
+    height: 100%;
+    padding: 0 2rem 0 2rem;
+}
+
+header .banner .banner-content{
+    display: flex;
+    align-items: center;
+}
+
+header .banner-content .author-photo{
+    display: flex;
+    max-height: 100%;
+    height: 20vh;
+    align-items: center;
+}
+
+header .banner-content img{
+    max-height: 100%;
+    height: auto;
+    max-width: 12vw;
+    min-height: 3rem;
+    min-width: 3rem;
+    border-radius: 30px;
+    box-shadow: 3px 3px 3px black;
+    /* Transparencia nas bordas: */
+    /* mask-image:
+    linear-gradient(to right, transparent, black 1em),
+    linear-gradient(to bottom, transparent, black 1em),
+    linear-gradient(to top, transparent, black 1em),
+    linear-gradient(to left, transparent, black 1em);
+    mask-composite: intersect; */
+}
+
+header .author-info{
+    margin-left: 2rem;
+}
+
+header .banner hr{
+    border: none;
+    height: 2px;
+    background-image: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.5), transparent);
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+header .banner h1, .banner h6{
+    font-family: 'BannerFont';
 }
 
 header .banner h1, .banner h6{
@@ -54,12 +96,22 @@ header .banner h6 {
     text-shadow: 1px 1px 2px black;
 }
 
-header .banner-list {
+header .banner-contact {
     text-align: right;
 }
 
+header .banner-contact ul {
+	list-style: none;
+}
+header .banner-contact h3 {
+    font-size: 1.2rem;
+}
+header .banner-contact li {
+    font-size: 0.9rem;
+}
+
+
 header .nav-container{
-    /* background-color: rgb(187, 56, 29); */
     background: linear-gradient(to bottom, rgb(187, 56, 29), rgb(190, 104, 87), rgb(187, 56, 29));
     border-top: rgba(0, 0, 0, 0.75) solid 2px;
     box-shadow: 0px 3px 1px black;
@@ -116,19 +168,23 @@ header .hamburger {
 }
 
 
+@media screen and (max-width: 1200px) {
+    header .banner h1 {
+        font-size: calc(6.5vw - 1.5rem);
+    }
+}
 
 
 @media screen and (max-width: 768px) {
-
-    header .banner-background {
-        height: 30vh;
+    header .banner h1 {
+        font-size: clamp(1.5rem, calc(8.5vw - 1.5rem), 3.5rem);
     }
 
     header .banner h6 {
         text-align: left;
     }
 
-    header .banner-list {
+    header .banner-contact {
         display: none;
     }
 
@@ -143,9 +199,8 @@ header .hamburger {
         padding: 1.5rem;
         padding-top: 4rem;
         position: fixed;
-        overflow-y: auto;  /* permite rolar internamente se precisar */
+        overflow-y: auto;
         max-height: 100vh;
-
         scrollbar-width: thin;
         scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
     }
@@ -161,9 +216,6 @@ header .hamburger {
         border-radius: 3px;
         border: 1px solid transparent;
     }
-
-
-
 
     header .mobile-menu.active {
         display: block;
