--- a/css/text.css
+++ b/css/text.css
@@ -63,3 +63,26 @@ a:hover{
 a:active {
     opacity: 1;
 }
+
+/* LISTAS */
+ul {
+    list-style-type: disc;
+    list-style-position: outside;
+    margin: 1em 0;
+    padding-left: 40px;
+}
+
+ul ul {
+    list-style-type: circle;
+    margin-left: 15px;
+}
+
+ul ul ul {
+    list-style-type: square;
+    margin-left: 15px;
+}
+
+/* NEGRITO */
+strong, b{
+    font-weight: bold;
+}
